# Task2

./: CMakeLists.txt  README.md  Task2.cc
include/: ActionInit.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
mac_files/: accurate_run.mac  medium_run.mac  test_run.mac
src/: Actioninit.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
